# servey_test

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
count_day/: admin.py  apps.py  models.py
count_day/migrations/: 0001_initial.py  0002_count_day_time_alter_count_day_day.py  0003_rename_time_count_day_time.py  0004_alter_count_day_day.py  0005_alter_count_day_time.py  0006_remove_count_day_time.py
result/: admin.py  models.py  serializers.py  urls.py  views.py
result/migrations/: 0001_initial.py  0002_alter_tendencies_options_result_count_and_more.py  0003_alter_kind_tendency.py  0004_result_created_at_result_updated_at.py  0005_result_similar_result_worst.py  0006_remove_result_similar_remove_result_worst_and_more.py  0007_alter_kind_surmmary.py
servey/: admin.py  models.py  serializers.py  urls.py  views.py
servey/migrations/: 0001_initial.py  0002_remove_servey_content_servey_first_answer_and_more.py  0003_servey_branch.py  0004_servey_first_count.py  0005_servey_second_count.py  0006_alter_servey_title.py  0007_alter_servey_title.py  0008_alter_servey_title.py  0009_remove_servey_image.py
templates/: bar_chart.html
